@@ -35,6 +35,7 @@
     <hr>
     We do have the documentation for previous releases
     <ul>
+      <LI><P><A HREF="6.1.2/html">6.1.2</A></P></LI>
       <LI><P><A HREF="6.1.1/html">6.1.1</A></P></LI>
       <LI><P><A HREF="6.1.0/html">6.1.0</A></P></LI>
       <LI><P><A HREF="6.0.8/html">6.0.8</A></P></LI>
